--- a/index.html
+++ b/index.html
@@ -188,8 +188,7 @@
     }
 
     /* =========================
-       W3 FINAL (dein fertiger Stand) – aktuell ausgeblendet,
-       weil wir jetzt W3W1-KIP testen wollen.
+       W3 FINAL (ausgeblendet)
        ========================= */
     .w3FinalLayer{
       position:absolute;
@@ -201,9 +200,7 @@
     }
 
     /* =========================================================
-       ✅ NEU: W3W1-KIP (sichtbar)
-       - ALLES was mitstauchen soll, ist in .w3w1Pack drinnen
-       - Trennlinie ist extra und wird NICHT skaliert
+       ✅ W3W1-KIP (sichtbar)
        ========================================================= */
     .w3w1KipLayer{
       position:absolute;
@@ -215,16 +212,12 @@
     .w3w1Pack{
       position:absolute;
       inset:0;
-
-      /* so wie bei den KIP-Layern: Achse ist transform-origin */
       transform-origin: var(--axis-x) 50%;
-
-      /* 50% stauchen */
       transform: scaleX(0.5);
     }
 
     /* Gemeinsamer Schatten (Teil des Pakets!)
-       ✅ inklusive NORD-Schatten (neg. Y), damit er Richtung Boxmitte fällt
+       ✅ inklusive NORD-Schatten
     */
     .w3w1SharedShadow{
       position:absolute;
@@ -277,7 +270,10 @@
       top:  calc(4 * var(--step));
     }
 
-    /* W1 Basis nach Q2: left=4*step, top=4*step (wird innen rotiert) */
+    /* ✅ FIX: W1-Rotation NICHT mehr auf dem gleichen Element, das im skalierten Pack sitzt.
+       -> w1rotWrap bleibt "neutral"
+       -> Rotation liegt in w1rotInner (verhindert den 25%-Effekt)
+    */
     .w3w1Pack .w1rotWrap{
       position:absolute;
       left: calc(4 * var(--step));
@@ -285,10 +281,16 @@
       width: calc(3 * var(--cell) + 2 * var(--cell-gap));
       height: calc(3 * var(--cell) + 2 * var(--cell-gap));
       z-index: 6;
+      transform: none;
+      transform-origin: 50% 50%;
+    }
+    .w3w1Pack .w1rotWrap .w1rotInner{
+      position:absolute;
+      inset:0;
       transform: rotate(-90deg);
       transform-origin: 50% 50%;
     }
-    .w3w1Pack .w1rotWrap .cubeFinal{
+    .w3w1Pack .w1rotWrap .w1rotInner .cubeFinal{
       position:absolute;
       left:0; top:0;
     }
@@ -364,13 +366,13 @@
     .slot2-3e{ left: calc(4 * var(--step) + 0 * var(--step)); top: calc(1 * var(--step) + 1 * var(--step)); }
     .slot2-4e{ left: calc(4 * var(--step) + 0 * var(--step)); top: calc(1 * var(--step) + 2 * var(--step)); }
 
-    /* ===== W3 Slots relativ in Q3 (W3 Basis: wie W3 FINAL mapping) ===== */
+    /* ===== W3 Slots in Q3 ===== */
     .w3k-u1{ left: calc(1 * var(--step) + 2 * var(--step)); top: calc(4 * var(--step) + 0 * var(--step)); } /* 5D */
     .w3k-u2{ left: calc(1 * var(--step) + 2 * var(--step)); top: calc(4 * var(--step) + 1 * var(--step)); } /* 6D */
     .w3k-u3{ left: calc(1 * var(--step) + 0 * var(--step)); top: calc(4 * var(--step) + 2 * var(--step)); } /* 7B */
     .w3k-u4{ left: calc(1 * var(--step) + 1 * var(--step)); top: calc(4 * var(--step) + 2 * var(--step)); } /* 7C */
 
-    /* ===== W1 Slots relativ in Q2 (aber in RotWrap, daher lokal) ===== */
+    /* ===== W1 Slots lokal im Rot-Container ===== */
     .w1k-t1{ left: calc(1 * var(--step)); top: calc(0 * var(--step)); }
     .w1k-t2{ left: calc(2 * var(--step)); top: calc(0 * var(--step)); }
     .w1k-t3{ left: calc(0 * var(--step)); top: calc(1 * var(--step)); }
@@ -458,13 +460,15 @@
           <div class="slot w3k-u3 read-south" data-w3kip="U3"><div class="num"><span></span></div></div>
           <div class="slot w3k-u4 read-south" data-w3kip="U4"><div class="num"><span></span></div></div>
 
-          <!-- W1 Basis nach Q2, -90° -->
+          <!-- ✅ W1 Basis nach Q2, Rotation jetzt in w1rotInner -->
           <div class="w1rotWrap">
-            <div class="cubeFinal" aria-hidden="true"></div>
-            <div class="slot w1k-t1 read-north" data-w1kip="T1"><div class="num"><span></span></div></div>
-            <div class="slot w1k-t2 read-north" data-w1kip="T2"><div class="num"><span></span></div></div>
-            <div class="slot w1k-t3 read-west"  data-w1kip="T3"><div class="num"><span></span></div></div>
-            <div class="slot w1k-t4 read-west"  data-w1kip="T4"><div class="num"><span></span></div></div>
+            <div class="w1rotInner">
+              <div class="cubeFinal" aria-hidden="true"></div>
+              <div class="slot w1k-t1 read-north" data-w1kip="T1"><div class="num"><span></span></div></div>
+              <div class="slot w1k-t2 read-north" data-w1kip="T2"><div class="num"><span></span></div></div>
+              <div class="slot w1k-t3 read-west"  data-w1kip="T3"><div class="num"><span></span></div></div>
+              <div class="slot w1k-t4 read-west"  data-w1kip="T4"><div class="num"><span></span></div></div>
+            </div>
           </div>
         </div>
 
