--- a/index.html
+++ b/index.html
@@ -96,16 +96,6 @@
 
       --axis-x: calc(4 * var(--step) - (var(--cell-gap) / 2));
 
-      /* W2 Basis links oben */
-      --cube-col: 1;
-      --cube-row: 1;
-      --cube-x: calc(var(--cube-col) * var(--step));
-      --cube-y: calc(var(--cube-row) * var(--step));
-
-      /* Cast */
-      --cast-x: 18px;
-      --cast-y: 18px;
-
       box-shadow:
         10px 18px 42px rgba(0,0,0,0.55),
         3px 6px 16px rgba(0,0,0,0.35);
@@ -176,7 +166,7 @@
     }
 
     /* =========================
-       W2KIP + W1KIP (unsichtbar)
+       Quelle (unsichtbar): W2/W1 Basis zum Randomisieren
        ========================= */
     .pairLayer{
       position:absolute;
@@ -187,20 +177,8 @@
       visibility: hidden;
     }
 
-    /* =========================
-       W3 FINAL (ausgeblendet)
-       ========================= */
-    .w3FinalLayer{
-      position:absolute;
-      inset:0;
-      z-index: 7;
-      pointer-events:none;
-      opacity: 0;
-      visibility: hidden;
-    }
-
     /* =========================================================
-       ✅ W3W1-KIP (sichtbar)
+       ✅ W3W1-KIP (sichtbar) – gebaut wie deine bestehenden KIP-Layer
        ========================================================= */
     .w3w1KipLayer{
       position:absolute;
@@ -216,9 +194,7 @@
       transform: scaleX(0.5);
     }
 
-    /* Gemeinsamer Schatten (Teil des Pakets!)
-       ✅ inklusive NORD-Schatten
-    */
+    /* Gemeinsamer Schatten – Teil des Pakets */
     .w3w1SharedShadow{
       position:absolute;
       left: var(--step);
@@ -233,6 +209,7 @@
         0 -18px 28px rgba(0,0,0,0.24),
         0  -8px 14px rgba(0,0,0,0.16);
       filter: blur(1px);
+      pointer-events:none;
     }
 
     .cubeFinal{
@@ -242,8 +219,8 @@
       box-sizing: border-box;
 
       background:
-        radial-gradient(120% 90% at 15% 15%, var(--cube-wood-gold), transparent 55%),
-        radial-gradient(120% 90% at 25% 25%, var(--cube-wood-warm), transparent 60%),
+        radial-gradient(120% 90% at 15% 15%, rgba(249, 150, 30, 0.10), transparent 55%),
+        radial-gradient(120% 90% at 25% 25%, rgba(155, 70, 110, 0.10), transparent 60%),
         repeating-linear-gradient(
           20deg,
           rgba(0,0,0,0.02) 0px,
@@ -252,7 +229,7 @@
           rgba(255,255,255,0.02) 18px
         ),
         linear-gradient(135deg, rgba(255,255,255,0.16), rgba(0,0,0,0.08)),
-        linear-gradient(180deg, var(--cube-wood-base), var(--cube-wood-deep));
+        linear-gradient(180deg, #d7c2a4, #c9b08f);
 
       border: 4px solid var(--cube-border);
       border-radius: clamp(10px, 2.2vmin, 18px);
@@ -265,35 +242,10 @@
     }
 
     /* W3 Basis in Q3: 5B..7D => left=1*step, top=4*step */
-    .w3w1Pack .cubeFinal.w3b{
-      left: calc(1 * var(--step));
-      top:  calc(4 * var(--step));
-    }
+    .w3w1Pack .cubeFinal.w3b{ left: calc(1 * var(--step)); top: calc(4 * var(--step)); }
 
-    /* ✅ FIX: W1-Rotation NICHT mehr auf dem gleichen Element, das im skalierten Pack sitzt.
-       -> w1rotWrap bleibt "neutral"
-       -> Rotation liegt in w1rotInner (verhindert den 25%-Effekt)
-    */
-    .w3w1Pack .w1rotWrap{
-      position:absolute;
-      left: calc(4 * var(--step));
-      top:  calc(4 * var(--step));
-      width: calc(3 * var(--cell) + 2 * var(--cell-gap));
-      height: calc(3 * var(--cell) + 2 * var(--cell-gap));
-      z-index: 6;
-      transform: none;
-      transform-origin: 50% 50%;
-    }
-    .w3w1Pack .w1rotWrap .w1rotInner{
-      position:absolute;
-      inset:0;
-      transform: rotate(-90deg);
-      transform-origin: 50% 50%;
-    }
-    .w3w1Pack .w1rotWrap .w1rotInner .cubeFinal{
-      position:absolute;
-      left:0; top:0;
-    }
+    /* ✅ W1 Basis in Q2 (NICHT gedreht als Fläche!) */
+    .w3w1Pack .cubeFinal.w1b{ left: calc(4 * var(--step)); top: calc(4 * var(--step)); }
 
     .slot{
       position:absolute;
@@ -355,28 +307,32 @@
     .read-east  { --num-rot: calc(var(--rotSign) * -90deg); }
     .read-north { --num-rot: calc(var(--rotSign) * 180deg); }
 
-    /* ===== Quelle Slots (W2/W1 intern) ===== */
-    .slot-2b{ left: calc(var(--cube-x) + 0 * var(--step)); top:  calc(var(--cube-y) + 0 * var(--step)); }
-    .slot-2c{ left: calc(var(--cube-x) + 1 * var(--step)); top:  calc(var(--cube-y) + 0 * var(--step)); }
-    .slot-3d{ left: calc(var(--cube-x) + 2 * var(--step)); top:  calc(var(--cube-y) + 1 * var(--step)); }
-    .slot-4d{ left: calc(var(--cube-x) + 2 * var(--step)); top:  calc(var(--cube-y) + 2 * var(--step)); }
+    /* ===== Quelle Slots (unsichtbar intern) ===== */
+    /* (Positionswerte sind egal, weil unsichtbar – bleiben aber wie gehabt konsistent) */
+    .slot-2b{ left: calc(1 * var(--step)); top: calc(1 * var(--step)); }
+    .slot-2c{ left: calc(2 * var(--step)); top: calc(1 * var(--step)); }
+    .slot-3d{ left: calc(3 * var(--step)); top: calc(2 * var(--step)); }
+    .slot-4d{ left: calc(3 * var(--step)); top: calc(3 * var(--step)); }
 
-    .slot2-2f{ left: calc(4 * var(--step) + 1 * var(--step)); top: calc(1 * var(--step) + 0 * var(--step)); }
-    .slot2-2g{ left: calc(4 * var(--step) + 2 * var(--step)); top: calc(1 * var(--step) + 0 * var(--step)); }
-    .slot2-3e{ left: calc(4 * var(--step) + 0 * var(--step)); top: calc(1 * var(--step) + 1 * var(--step)); }
-    .slot2-4e{ left: calc(4 * var(--step) + 0 * var(--step)); top: calc(1 * var(--step) + 2 * var(--step)); }
+    .slot2-2f{ left: calc(5 * var(--step)); top: calc(1 * var(--step)); }
+    .slot2-2g{ left: calc(6 * var(--step)); top: calc(1 * var(--step)); }
+    .slot2-3e{ left: calc(4 * var(--step)); top: calc(2 * var(--step)); }
+    .slot2-4e{ left: calc(4 * var(--step)); top: calc(3 * var(--step)); }
 
-    /* ===== W3 Slots in Q3 ===== */
+    /* ===== W3 Slots in Q3 (global, passend zum Cube w3b) ===== */
     .w3k-u1{ left: calc(1 * var(--step) + 2 * var(--step)); top: calc(4 * var(--step) + 0 * var(--step)); } /* 5D */
     .w3k-u2{ left: calc(1 * var(--step) + 2 * var(--step)); top: calc(4 * var(--step) + 1 * var(--step)); } /* 6D */
     .w3k-u3{ left: calc(1 * var(--step) + 0 * var(--step)); top: calc(4 * var(--step) + 2 * var(--step)); } /* 7B */
     .w3k-u4{ left: calc(1 * var(--step) + 1 * var(--step)); top: calc(4 * var(--step) + 2 * var(--step)); } /* 7C */
 
-    /* ===== W1 Slots lokal im Rot-Container ===== */
-    .w1k-t1{ left: calc(1 * var(--step)); top: calc(0 * var(--step)); }
-    .w1k-t2{ left: calc(2 * var(--step)); top: calc(0 * var(--step)); }
-    .w1k-t3{ left: calc(0 * var(--step)); top: calc(1 * var(--step)); }
-    .w1k-t4{ left: calc(0 * var(--step)); top: calc(2 * var(--step)); }
+    /* ===== W1 Slots in Q2 (global, passend zum Cube w1b) =====
+       WICHTIG: Cube bleibt ungedreht -> Slots werden wie bei W1-Basis gesetzt,
+       Leserichtung über read-* geregelt.
+    */
+    .w1k-t1{ left: calc(4 * var(--step) + 1 * var(--step)); top: calc(4 * var(--step) + 0 * var(--step)); } /* wie 2F */
+    .w1k-t2{ left: calc(4 * var(--step) + 2 * var(--step)); top: calc(4 * var(--step) + 0 * var(--step)); } /* wie 2G */
+    .w1k-t3{ left: calc(4 * var(--step) + 0 * var(--step)); top: calc(4 * var(--step) + 1 * var(--step)); } /* wie 3E */
+    .w1k-t4{ left: calc(4 * var(--step) + 0 * var(--step)); top: calc(4 * var(--step) + 2 * var(--step)); } /* wie 4E */
 
     /* ✅ Trennlinie (oberste Ebene, NICHT skaliert) */
     .divider-W3W1{
@@ -432,7 +388,7 @@
       <div class="ball" aria-label="Kugel"></div>
       <div id="grid" class="grid" aria-label="8×8 Raster"></div>
 
-      <!-- Quelle (unsichtbar): W2/W1 Basis zum Randomisieren -->
+      <!-- Quelle (unsichtbar) -->
       <div class="pairLayer" id="pairLayer">
         <div class="slot slot-2b read-north" data-slot="S1"><div class="num"><span></span></div></div>
         <div class="slot slot-2c read-north" data-slot="S2"><div class="num"><span></span></div></div>
@@ -445,31 +401,25 @@
         <div class="slot slot2-4e read-west"  data-slot="T4"><div class="num"><span></span></div></div>
       </div>
 
-      <!-- W3 FINAL (ausgeblendet) -->
-      <div class="w3FinalLayer" id="w3FinalLayer"></div>
-
       <!-- ✅ W3W1 KIP (sichtbar) -->
       <div class="w3w1KipLayer" id="w3w1KipLayer">
         <div class="w3w1Pack" id="w3w1Pack">
           <div class="w3w1SharedShadow" aria-hidden="true"></div>
 
-          <!-- W3 Basis in Q3 -->
+          <!-- W3 in Q3 -->
           <div class="cubeFinal w3b" aria-hidden="true"></div>
           <div class="slot w3k-u1 read-east"  data-w3kip="U1"><div class="num"><span></span></div></div>
           <div class="slot w3k-u2 read-east"  data-w3kip="U2"><div class="num"><span></span></div></div>
           <div class="slot w3k-u3 read-south" data-w3kip="U3"><div class="num"><span></span></div></div>
           <div class="slot w3k-u4 read-south" data-w3kip="U4"><div class="num"><span></span></div></div>
 
-          <!-- ✅ W1 Basis nach Q2, Rotation jetzt in w1rotInner -->
-          <div class="w1rotWrap">
-            <div class="w1rotInner">
-              <div class="cubeFinal" aria-hidden="true"></div>
-              <div class="slot w1k-t1 read-north" data-w1kip="T1"><div class="num"><span></span></div></div>
-              <div class="slot w1k-t2 read-north" data-w1kip="T2"><div class="num"><span></span></div></div>
-              <div class="slot w1k-t3 read-west"  data-w1kip="T3"><div class="num"><span></span></div></div>
-              <div class="slot w1k-t4 read-west"  data-w1kip="T4"><div class="num"><span></span></div></div>
-            </div>
-          </div>
+          <!-- ✅ W1 in Q2 (Quadrat ungedreht; nur Zahlenrotation) -->
+          <div class="cubeFinal w1b" aria-hidden="true"></div>
+          <div class="slot w1k-t1 read-north" data-w1kip="T1"><div class="num"><span></span></div></div>
+          <div class="slot w1k-t2 read-north" data-w1kip="T2"><div class="num"><span></span></div></div>
+          <div class="slot w1k-t3 read-west"  data-w1kip="T3"><div class="num"><span></span></div></div>
+          <div class="slot w1k-t4 read-west"  data-w1kip="T4"><div class="num"><span></span></div></div>
+
         </div>
 
         <!-- Trennlinie oben drüber, nicht skaliert -->
@@ -487,11 +437,11 @@
     const grid = document.getElementById("grid");
     const btn = document.getElementById("btnBestuecken");
 
-    // Quelle: Slots S/T (unsichtbar intern)
+    // Quelle
     const srcSlotEls = Array.from(document.querySelectorAll(".pairLayer .slot"));
     const srcSpans = new Map(srcSlotEls.map(s => [s.dataset.slot, s.querySelector(".num > span")]));
 
-    // Sichtbar: W3W1-KIP Slots
+    // Sichtbar: W3W1-KIP
     const w3KipEls = Array.from(document.querySelectorAll("[data-w3kip]"));
     const w3KipSpans = new Map(w3KipEls.map(s => [s.dataset.w3kip, s.querySelector(".num > span")]));
 
@@ -561,10 +511,9 @@
     }
 
     function setRandomNumbers(){
-      // 12 eindeutige Zahlen
       const nums = getUniqueRandomNumbers(12, 1, 12);
 
-      // S/T (Quelle) 8 Zahlen
+      // Quelle S/T
       const keysST = ["S1","S2","S3","S4","T1","T2","T3","T4"];
       keysST.forEach((k, idx) => {
         const span = srcSpans.get(k);
@@ -574,14 +523,13 @@
         setDot(span, n);
       });
 
-      // U1..U4 (W3) 4 Zahlen
+      // W3: U1..U4
       const w3Store = new Map();
       ["U1","U2","U3","U4"].forEach((k, i) => {
         const n = nums[8 + i];
         w3Store.set(k, { text: String(n), dot: (n === 6 || n === 9) });
       });
 
-      // W3KIP anzeigen
       ["U1","U2","U3","U4"].forEach(k => {
         const dst = w3KipSpans.get(k);
         const v = w3Store.get(k);
@@ -590,7 +538,7 @@
         dst.classList.toggle("dot", !!v.dot);
       });
 
-      // W1KIP anzeigen (T1..T4 aus Quelle übernehmen)
+      // W1: T1..T4 (aus Quelle)
       ["T1","T2","T3","T4"].forEach(k => {
         const src = srcSpans.get(k);
         const dst = w1KipSpans.get(k);
